# logiclayer

./: .gitignore  PROJECT.md  README.md
backend/src/heart_transplant/: artifact_store.py  beta_api.py  beta_lambda.py  beta_runtime.py  cli.py  evidence.py  mcp_server.py  paper_checklist.py
backend/src/heart_transplant/classify/: pipeline.py
backend/src/heart_transplant/evals/: evidence_benchmark.py
backend/tests/: test_beta_runtime.py  test_evidence_benchmark.py  test_logiclens_paper_path.py
docs/: architecture-browser-runtime-plan.md  index.html
docs/assets/: pages.css  pages.js
docs/evals/: block-classification-benchmark-2026-04-27.md  codes_tool_calibration.md  evidence_benchmark_report.json  evidence_questions.json  gold-standards.md  trending-top50-ec2-first-synthesis-2026-04-27.md  vendored-ground-truth.md
docs/evals/fixtures/logiclens-evidence-benchmark/: semantic-artifact.json  structural-artifact.json
docs/roadmaps/: alignment-and-trajectory-2026-04-27.md  logiclens-next-tranche-2026-04-27.md  logiclens-paper-grade-roadmap.md
docs/validation/: current-validation-gates.md  future-capability-gates.md
logiclens_cleanroom/: pyproject.toml
logiclens_cleanroom/src/logiclens_cleanroom/: __init__.py  cli.py  embeddings.py  models.py  react_agent.py  semantic_heuristic.py  semantic_llm.py  structural_ingest.py  tools.py
logiclens_cleanroom/tests/: test_cleanroom_pipeline.py
scripts/: deploy-logiclens-lambda.ps1  deploy-logiclens-lambda.sh
